@@ -5,6 +5,9 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Add missing !default to font family definitions.
+  [mathias.leimgruber] 
+
 - Fix init apply of onegovbear profile. Check commit desc for details.
   [mathias.leimgruber]
 
